1.整合Redis缓存机制和相应的配置;

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ logging:
     com.example.demo: debug
 spring:
   profiles:
-    active: dev
+    active: dev,redis
   thymeleaf:
     cache: false
   security:
