--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>demo</artifactId>
+    <artifactId>springboot-technology</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
@@ -28,6 +28,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-tomcat</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -35,6 +41,21 @@
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>1.3.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <!--mavne 中scope 主要用于管理依赖的部署 约定大于配置-->
+        <!-- {
+         1.compile scop的默认值，表示dependency都可以在生命周期中使用，而且，这些dependencys会传递到的依赖的项目中，使用与所有阶段，会随着项目一起发布
+         2.provided 打包的时候可以不用打包进去，表明dependencys有jdk或者容器提供，这个scope只能作用在编译和测试时，同时没有传递性，相当于compile，只是打包阶段做了exclude操作。
+         3.runtime  表示被依赖项目无需参与项目的编译，不过后期的测试和运行周期需要其参与，与compile相似，只是跳过的编译。
+         4.test 依赖项目仅仅参与测试相关的工作，包括测试代码的编译和执行，但不会被打包，例如:junit
+         5.system 从参与角度来说和provide相同，不过被依赖项不会被maven仓库下载，而是从本地系统文件中拿，需要添加systemPath属性来定义路径
+         }-->
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -107,10 +128,10 @@
                <artifactId>spring-boot-starter-jdbc</artifactId>
            </dependency>-->
 
-      <!--  <dependency>
-            <groupId>org.springframework.security.oauth</groupId>
-            <artifactId>spring-security-oauth2</artifactId>
-        </dependency>-->
+        <!--  <dependency>
+              <groupId>org.springframework.security.oauth</groupId>
+              <artifactId>spring-security-oauth2</artifactId>
+          </dependency>-->
         <!-- https://mvnrepository.com/artifact/org.flywaydb/flyway-core -->
         <dependency>
             <groupId>org.flywaydb</groupId>
