--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,12 @@
             <artifactId>flyway-core</artifactId>
             <version>5.1.4</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>26.0-jre</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
